--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-source-datocms": "^2.1.11",
     "gatsby-source-filesystem": "^2.0.32",
+    "gatsby-telemetry": "^1.1.12",
     "gatsby-transformer-remark": "^2.3.12",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
